# ZENITH

./: .bandit  .clang-tidy  .gitignore  .mutmut-cache  .zenith_tuning_cache.json  BENCHMARK_REPORT.md  BENCHMARK_REPORT_JAX.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CetakBiru.md  LICENSE  MIGRATION.md  README.md  VERIFICATION_REPORT.md  build_cuda.sh  colab_benchmark.py  colab_gpu_test.ipynb  colab_pip_install_test.ipynb  colab_tpu_test.ipynb  colab_triton_test.ipynb  hasilcolab.md  hasilnotebook.md  pyproject.toml  setup.cfg  setup.py  test_zenith_cuda.py  website_blueprint.md
.github/: dependabot.yml
HasilNotebook/: hasilNotebook.md  hasil_notebook.md  hasil_notebook_zenith_jax_phase2_validation.md
Result_Notebook/: Result_Notebook.md  Result_TEST_CPU.md  Result_gpu_chaos_test.md  Result_notebookZenith_JAX_Phase_1_Validation.md  Result_notebook_zenith_jax_phase2_validation.md  Result_zenith_comprehensive_verification.md  Result_zenith_jax_phase3_validation.md  Result_zenith_proper_benchmark.md
benchmarks/: __init__.py  bert_benchmark.py  bert_comparison.py  bert_encoder.py  bert_flash_attention.py  bert_fp16_full.py  bert_gpu_resident.py  bert_hybrid.py  bert_mlperf.py  bert_zero_copy.py  conv2d_bench.py  debug_bert_encoder.py  debug_conv2d.py  debug_fp16.py  debug_resnet_accuracy.py  debug_resnet_extended.py  flash_attention_benchmark.py  fp16_benchmark.py  fusion_bench.py  fusion_benchmark.py  int8_bench.py  jax_benchmarks.py  layernorm_bench.py  mlperf_suite.py  models.py  optimized_benchmark.py  production_benchmark.py  qat_benchmark.py  quantization_benchmark.py  report.py  report_generator.py  resnet50_benchmark.py  resnet50_full.py  resnet50_gpu.py  resnet50_optimized.py  resnet_benchmark.py  resnet_mlperf.py  run_benchmarks.py  speedup_benchmark.py  training_benchmark.py  (+1 more)
core/: CMakeLists.txt
core/bindings/: cuda_bindings.cpp
core/include/zenith/: attention_ops.hpp  autotuner.hpp  backend.hpp  benchmark_framework.hpp  compilation_session.hpp  compiled_artifact.hpp  cpu_backend.hpp  cublas_attention.hpp  cublas_enhanced.hpp  cublas_ops.hpp  cuda_backend.hpp  cuda_graphs.hpp  cuda_kernels.hpp  cudnn_ops.hpp  dispatcher.hpp  error_bounds.hpp  flash_attention.hpp  flash_attention_v2.hpp  fp16_kernels.hpp  fp16_ops.hpp  gpu_tensor.hpp  graph_ir.hpp  graph_optimizer.hpp  kernel.hpp  kernel_fusion.hpp  kernel_registry.hpp  kernels.hpp  memory_pool.hpp  miopen_ops.hpp  model_executor.hpp  node.hpp  oneapi_backend.hpp  onnx_loader.hpp  onnx_saver.hpp  op_signature.hpp  perf_optimizations.hpp  pruning.hpp  rocblas_ops.hpp  rocm_backend.hpp  stream_manager.hpp  (+4 more)
core/include/zenith/optimization/: constant_folding.hpp  dead_code_elimination.hpp  operator_fusion.hpp
core/include/zenith/quantization/: calibration.hpp  qat.hpp  quantizer.hpp  types.hpp
core/src/: compilation_session.cpp  cpu_kernels.cpp  cublas_attention.cu  cuda_kernels.cu  flash_attention.cu  flash_attention_v2.cu  fp16_kernels.cu  fp16_ops.cu  fused_kernels.cu  graph_ir.cpp  qat_cuda.cu  transformer_kernels.cu
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  BLUEPRINT_ZENITH_3X.md  DISCUSSION_NOTES_2024_12_21.md  MONITORING_COMMUNITY_GUIDE.md  SPEEDUP_ROADMAP.md  TASK_LIST_ZENITH_3X.md  Untitled-1  daftar_tugas_jax_integration.md  jax_full_integration_blueprint.md  jax_integration.md  monitoring.md  observability_tutorial.md
grafana/: zenith-dashboard.json
notebooks/: README.md  colab_cpu_test.ipynb  colab_tpu_test.ipynb  colab_triton_test.ipynb  conda_build_cuda.ipynb  gpu_chaos_test.ipynb  integration_test_colab.ipynb  phase5_tensor_core_test.ipynb  transformer_benchmark.ipynb  zenith_advanced_validation.ipynb  zenith_complete_tutorial.ipynb  zenith_comprehensive_verification.ipynb  zenith_gpu_validation.ipynb  zenith_integration_test.ipynb  zenith_jax_phase1_validation.ipynb  zenith_jax_phase2_validation.ipynb  zenith_jax_phase3_validation.ipynb  zenith_proper_benchmark.ipynb  zenith_pytorch_ml_demo.ipynb  zenith_vs_tensorrt.ipynb
python/: CMakeLists.txt
python/src/: bindings.cpp  features_bindings.hpp
scripts/: colab_cuda_build.py  colab_validation.py  gpu_validation.py  (+1 more)
tests/: CMakeLists.txt  test_autotuner_advanced.py  test_backends.py  test_cuda_cublas_bindings.py  test_cudnn_integration.py  test_e2e_integration.py  test_error_bounds.py  test_graph_ir.cpp  test_graph_optimization.py  test_jax_adapter.py  test_kernel_fusion_autotuner_pruning.py  test_kernels.cpp  test_layernorm_parallel.py  test_memory_coalescing.py  test_memory_frag.py  test_memory_pool_benchmark.py  test_node.cpp  test_numerical_accuracy.py  test_onnx.py  test_perf_optimizations.py  test_pytorch_adapter.py  test_qat.py  test_qat_cuda.py  test_quantization.py  test_registry_integration.py  test_tensor.cpp  test_tensorflow_adapter.py  test_triton_backend.py  test_triton_integration.py  test_types.cpp
tests/chaos/: README.md  __init__.py  gpu_chaos.py  memory_chaos.py  network_chaos.py
tests/compat/: __init__.py  test_version_matrix.py
tests/e2e/: __init__.py  test_jax_workflow.py  test_workflow.py  test_xla_backend.py
tests/integration/: test_api_unified.py  test_benchmarks.py  triton_load_test.py
tests/load/: README.md  __init__.py  locustfile.py  stress_test.py
tests/python/: __init__.py  conftest.py  test_adapters_comprehensive.py  test_advanced_fusion.py  test_advanced_optimization.py  test_api_comprehensive.py  test_api_unit.py  test_autotuner_unit.py  test_core_unit.py  test_cuda_graphs.py  test_dispatch.py  test_errors.py  test_fusion_layout.py  test_fx_executor.py  test_fx_patterns.py  test_gpu_metrics.py  test_gradient_checkpointing.py  test_inference.py  test_jax_integration.py  test_jax_onnx_export.py  test_jax_primitives.py  test_model_zoo.py  test_native_checkpointing.py  test_numerical_accuracy.py  test_observability.py  test_onnx_adapter.py  test_optimization.py  test_pass_manager_unit.py  test_phase3_quantization.py  test_property_based.py  test_rocm_backend.py  test_runtime.py  test_triton_kernels.py
tests/soak/: README.md  __init__.py  memory_soak.py
(+202 files in other folders)
